# RenameKeepTimeStamp

./: .gitignore  AddRenameKeepTimestampContextMenuTemplate.reg  CMakeLists.txt  LICENSE.txt  README.md  UninstallRenameKeepTimestampContextMenu.reg
include/: FileUtils.h  resource.h
res/: Resource.rc
src/: FileUtils.cpp  RenameKeepTimestamp.cpp
tests/: RenameKeepTimestampTest.cpp
